# llm-finance-book

./: .gitignore  BOOK_AUDIT_PROJECT_CONTEXT.md  README.md  TOPIC.md  environment.yml  index.html  requirements.txt
code/: build_figures.sh  pyproject.toml  requirements.txt  run_illustrations.sh
code/figures/01-intro/: gen_edgar_text_growth.ipynb  gen_king_analogy.ipynb  gen_king_analogy.py  gen_tfidf_headlines.ipynb
code/figures/02-llm-foundations/: gen_positional_encoding.ipynb
code/figures/03-llm-training-finetuning/: gen_chinchilla_frontier.ipynb  gen_chinchilla_frontier.py
code/figures/05-business-valuation/: gen_dcf_sensitivity.ipynb
code/figures/07-applications-future/: gen_benchmark_comparison.ipynb
code/figures/08-domain-specific-llms/: gen_corpus_composition.ipynb  gen_corpus_composition.py
code/figures/09-financial-nlp-sentiment/: gen_lm_lexicon.ipynb
code/figures/10-portfolio-quant-trading/: gen_efficient_frontier.ipynb  gen_efficient_frontier.py
code/figures/11-regtech-compliance-aml/: gen_rrf_fusion.ipynb  gen_rrf_fusion.py
code/figures/12-xai-explainability/: gen_shap_attribution.ipynb  gen_shap_attribution.py
code/figures/13-llm-limitations-evaluation/: gen_reliability_diagram.ipynb  gen_reliability_diagram.py
code/figures/15-privacy-local-models/: gen_dp_privacy_utility.ipynb  gen_dp_privacy_utility.py
code/notebooks/01-intro/: accounting_identity_cache.json  analogy_backends.py  demo.ipynb  edgar_text_stats_cache.json  embedding_analogy_cache.json  exercises.ipynb  (+5 more)
code/src/: __init__.py
code/tests/: __init__.py
(+892 files in other folders)
