[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfin"
version = "0.1.0"
description = "Shared helpers for the 'Large Language Models in Finance' book and course (figure generators + student practicals)."
authors = [{ name = "Juan F. Imbet" }]
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "requests"]

[tool.setuptools.packages.find]
where = ["src"]
